# mini-codex-coding-agent

./: AGENTS.md  Makefile  README.md  agents.md  pyproject.toml
configs/: tool_whitelist.yaml
configs/models/: default.yaml
core/commands/: __init__.py  audit.py  config.py  guard.py  runner.py
core/models/: __init__.py  adapter.py  config.py  roles.py  router.py
core/patcher/: __init__.py  applier.py  diff.py  guard.py  patch.py
core/planner/: __init__.py  context_builder.py  plan.py  planner.py
core/rag/: __init__.py  chunker.py  indexer.py  retriever.py  source_registry.py
core/repo/: __init__.py  browser.py
data/chroma/: chroma.sqlite3
data/knowledge/coding_standards/: python_backend_standard.md
data/knowledge/project_docs/: project_overview.md
docs/: api.md  architecture.md  milestones.md  product.md  security.md
docs/Kimi_Agent_M1 Flask 开发/: run.py
docs/Kimi_Agent_M1 Flask 开发/flaskr/static/: script.js  style.css
docs/Kimi_Agent_M1 Flask 开发/flaskr/templates/blog/: history.html  splash.html
docs/Kimi_Agent_M1 Flask 开发/instance/: flaskr.sqlite
flask/: run.py
flask/app/: index.html
flask/flaskr/: __init__.py  blog.py  db.py  schema.sql
flask/flaskr/templates/: base.html
flask/flaskr/templates/auth/: login.html  register.html
flask/flaskr/templates/blog/: chat.html  command.html  commands.html  logo.html  menu.html  patch.html  patches.html  plan.html  plans.html  repo.html  repo_file.html  repos.html  settings.html  settings.html.00
flask/instance/: flaskr.sqlite
rag_sources/: default.yaml
scripts/: dev.sh  format.sh  lint.sh  test.sh
tests/: test_commands.py  test_model_router.py  test_patcher.py  test_planner.py  test_rag.py  test_repo.py
